<resources>
    <string name="app_name">SPV channels</string>
    <string name="msg_base_url">Base URL</string>
    <string name="action_enter">Enter</string>
    <string name="action_change_url">Change url</string>
    <string name="msg_username">Username</string>
    <string name="msg_password">Password</string>
    <string name="action_open_channels">Open channels API</string>
    <string name="msg_channels_api">Channels API</string>
    <string name="action_open_messages">Open messages API</string>
    <string name="msg_messages">Messages API</string>
    <string name="msg_token">Token</string>
    <string name="msg_account_id">Account ID</string>
    <string name="msg_create_channel">Create channel</string>
    <string name="msg_public_read">Public read</string>
    <string name="msg_public_write">Public write</string>
    <string name="msg_sequenced">Sequenced</string>
    <string name="msg_min_age">Min age</string>
    <string name="msg_max_age">Max age</string>
    <string name="msg_auto_prune">Auto prune</string>
    <string name="msg_response">Response:</string>
    <string name="msg_get_channel">Get channel</string>
    <string name="msg_channel_id">Channel ID</string>
    <string name="msg_list_channels">Get all channels</string>
    <string name="msg_delete_channel">Delete channel</string>
    <string name="msg_amend_channel">Amend channel</string>
    <string name="msg_locked">Locked</string>
    <string name="msg_get_channel_tokens">Get channel tokens</string>
    <string name="msg_leave_empty">Leave empty for all (list only)</string>
    <string name="msg_get_token_info">Get token info</string>
    <string name="msg_create_token">Create token</string>
    <string name="msg_description">Description</string>
    <string name="msg_revoke_token">Revoke token</string>
    <string name="msg_select_action">Select action</string>
    <string name="msg_send_message">Send message</string>
    <string name="msg_content_type">Content type</string>
    <string name="msg_payload">Payload</string>
    <string name="msg_get_max_sequence">Get max sequence</string>
    <string name="msg_get_all_messages">Get all messages</string>
    <string name="msg_unread_only">Unread only</string>
    <string name="msg_message_read_unread">Set message read/unread</string>
    <string name="msg_mark_earlier">Also mark earlier messages</string>
    <string name="msg_mark_read">Mark message as read/unread</string>
    <string name="msg_delete_message">Delete message</string>
    <string name="msg_message_id">Message ID</string>
    <string name="msg_notifications_enabled">Notifications enabled</string>
    <string name="action_disable_all_notifications">Disable all notifications</string>
    <string name="msg_encryption">libSodium Encryption</string>
</resources>