<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="io.bitcoinsv.spvchannels.host.screens.messages.MessagesViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/layout_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/et_type"
                android:text="@string/msg_content_type" />

            <EditText
                android:id="@+id/et_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:text="@={viewModel.state.contentType}" />

            <TextView
                android:id="@+id/tv_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/et_message"
                android:text="@string/msg_payload" />

            <EditText
                android:id="@+id/et_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:text="@={viewModel.state.message}" />

            <TextView
                android:id="@+id/tv_message_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/et_message_id"
                android:text="@string/msg_message_id" />

            <EditText
                android:id="@+id/et_message_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:text="@={viewModel.state.messageId}" />

            <CheckBox
                android:id="@+id/cb_unread"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="@={viewModel.state.unreadOnly}"
                android:text="@string/msg_unread_only" />

            <CheckBox
                android:id="@+id/cb_read"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="@={viewModel.state.messageRead}"
                android:text="@string/msg_message_read_unread" />

            <CheckBox
                android:id="@+id/cb_older"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="@={viewModel.state.older}"
                android:text="@string/msg_mark_earlier" />

            <Button
                android:id="@+id/btn_perform"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/msg_create_channel" />

            <CheckBox
                android:id="@+id/cb_notifications"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="@={viewModel.notificationsEnabled}"
                android:text="@string/msg_notifications_enabled" />

            <TextView
                android:id="@+id/tv_response"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/msg_response" />

            <TextView
                android:id="@+id/tv_response_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:text="@{viewModel.state.response}"
                android:textIsSelectable="true" />
        </LinearLayout>
    </ScrollView>
</layout>